Fixing google button alignment on login and register page

--- a/src/components/forms/SignUpForm.module.css
+++ b/src/components/forms/SignUpForm.module.css
@@ -57,7 +57,8 @@ color: #fdf7f7;
 
 .alternativeLabel {
   color: var(--eureka-green);
-  margin-top: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   text-align: center;
 }
 
@@ -75,6 +76,9 @@ color: #fdf7f7;
 .gmailLogo {
    width: 1.5rem;
   height: 1.5rem;
+}
+.gmailLogoAndtext{
+  margin-top: 11px;  
 }
 
 .personalData{
